syntax = "proto3";

package hello;

import "google/api/annotations.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
          option (google.api.http) = {
              post: "/v1/example/echo"
              body: "*"
          };
    }
    rpc LotsOfReplies(HelloRequest) returns (stream HelloReply) {
        option (google.api.http) = {
              post: "/v1/example/lots"
              body: "*"
          };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
